{NEXT}

CHANGES SINCE 0.94.0

* Implemented action key overriding:
  - It is possible to control label and icon of action key from
    application through Maliit attribute extensions.
* New nokia-n9 with Droid fonts style
  - Use qmake MALIIT_DEFAULT_PROFILE=nokia-n9-droid to activate.
* Allow fonts to be styled:
  - Font name for each layout can be specified.
  - If font is not available system-wide then it is possible
    to specify a font file.
  - See new nokia-n9-droid style for example use.

0.94.0
======

CHANGES SINCE 0.93.1
* Fix build for Qt 5 qmake.
* Fix geometry of fullscreen item after rotation.

0.93.1
======

CHANGES SINCE 0.93.0
* More Nemo Keyboard improvements
  - Remove unused KeyStyle and KeyboardStyle.
  - Make close gesture less sensitive.
  - More robust key detection.
  - Code clean ups
  - Remove executable bit from nemo-keyboard files.
  - Use QtQuick2 (requires compilation against Qt5).

0.93.0
======

CHANGES SINCE 0.92.5
* Added 10 new language layouts
  - Armenian, Bengali, French-Swiss, Gujarati, Hindi, Kannada, Malayalam,
    Tamil, Telugu and Urdu. 
* Implemented key actions to switch between language layouts
  - Use <key action="[left|right]-layout">...</key> to define keys for
    switching to surrounding language layouts (also known as subviews, from the
    framework's perspective).
* Various improvements to Nemo Keyboard plugin.
* Allow to disable either Nemo or Maliit Keybord plugin
  - Use qmake CONFIG+=disable-[nemo|maliit]-keyboard to prevent building and
    installation of either the QML or the C++ reference plugin.

BUG FIXES
* Fixes: MALIIT#195 - Extended key feature does not work with any keys where a
  width is specified in the layout
* Fixes: NEMO#451 - Use a single MouseArea for the whole keyboard

0.92.5
======

CHANGES SINCE 0.92.4
* Make maliit-framework compile against Qt 5 beta release.
* Update OLPC styling profile

0.92.4
======

BUG FIXES
* Fixes: CONFIG+=disable-preedit

0.92.3
======

CHANGES SINCE 0.92.2