@@ -26,6 +26,8 @@ SOURCES += \
     logic/abstractlanguagefeatures.cpp \
     logic/languagefeatures.cpp \
 
+DEFINES += HUNSPELL_DICT_PATH=\\\"$$HUNSPELL_DICT_PATH\\\"
+
 DEPENDPATH += $$LOGIC_DIR
 
 include(state-machines/state-machines.pri)
